<resources>
    <string name="app_name">StreamJournal</string>

    <string name="permission_request">This application requires permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="time_with_hours">%1$02d:%2$02d:%3$02d</string>
    <string name="time_no_hours">%1$02d:%2$02d</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="basic">Basic Enhancements</string>
    <string name="contrast_adjustment">Contrast adjustment</string>
    <string name="image_stabilisation">Image stabilisation</string>
    <string name="low_light">Low light denoising</string>
    <string name="advanced">Advanced Enhancements</string>
    <string name="background_blurring">Background blurring</string>

    <!-- Profile -->
    <string name="profile">Profile</string>
    <string name="connect">Connect your accounts</string>
    <string name="twitch">TWITCH</string>
    <string name="youtube">YOUTUBE</string>
    <string name="signed_in_google">You are currently signed in as %1$s (%2$s).</string>
    <string name="logout">LOG OUT</string>
</resources>
